tests/trybuild/indices/no_negative_arguments.stderr
error[E0600]: cannot apply unary operator `-` to type `usize`
 --> tests/trybuild/indices/no_negative_arguments.rs:6:40
  |
6 |     let (_one, _two) = indices!(slice, -1, 1);
  |                                        ^^
  |                                        |
  |                                        cannot apply unary operator `-`
  |                                        help: you may have meant the maximum value of `usize`: `usize::MAX`
  |
  = note: unsigned values cannot be negated
